--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,8 @@
 /* gris-clair */
 * {
   font-family: "Roboto";
+  margin: 0;
+  padding: 0;
 }
 
 a {
@@ -23,6 +25,29 @@ h3 {
   font-weight: bold;
   margin-top: 0px;
   margin-bottom: 0px;
+}
+
+h4 {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.euro {
+  font-weight: 700;
+}
+
+.text-15 {
+  font-size: 15px;
+  text-decoration: none;
+}
+.text-15-ligth {
+  font-weight: 300;
+}
+.text-15-medium {
+  font-weight: 500;
+}
+.text-15-bold {
+  font-weight: bold;
 }
 
 .text-16 {
@@ -76,7 +101,7 @@ h3 {
   display: flex;
   align-items: center;
   justify-content: center;
-  animation: spin-fade-out 0s 3s forwards;
+  animation: spin-fade-out 0s 10ms forwards;
   z-index: 9;
 }
 
@@ -87,7 +112,7 @@ h3 {
   height: 100px;
   border-top: 5px solid #9356DC;
   border-radius: 50%;
-  animation: 1500ms spin linear infinite;
+  animation: 1500ms spin cubic-bezier(0.14, 0.46, 0.79, 0.5) infinite;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -98,9 +123,8 @@ h3 {
   height: 110px;
   color: #9356dc;
   position: relative;
-  left: -26px;
+  left: -27px;
   top: -2px;
-  /*animation: 1500ms spin2 linear infinite;*/
 }
 
 .loader::before {
@@ -116,34 +140,16 @@ h3 {
 
 @keyframes spin {
   0% {
+    transform: rotate(0deg);
+  }
+  100% {
     transform: rotate(360deg);
-  }
-  100% {
-    transform: rotate(0deg);
-  }
-}
-@keyframes spin2 {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(180deg);
   }
 }
 @keyframes spin-fade-out {
-  0% {
-    transform: scaley(1);
-  }
   100% {
-    transform: scaley(0);
-  }
-}
-@keyframes spin2-fade-out {
-  0% {
-    transform: scaley(1);
-  }
-  100% {
-    transform: scaley(0);
+    display: none;
+    z-index: -999;
   }
 }
 /***** FIN LOADER *****/
@@ -362,7 +368,6 @@ input[type=text] {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  /*margin-top: 15px;*/
   width: 100%;
   height: 251px;
   margin-top: 18px;
@@ -425,17 +430,14 @@ input[type=text] {
   justify-content: space-between;
 }
 .carte_restaurant_bas__coeur .carte_restaurant_bas__coeur--vide {
-  font-size: 25px;
+  font-size: 26px;
   position: absolute;
   bottom: 33px;
   right: 25px;
 }
 .carte_restaurant_bas__coeur .carte_restaurant_bas__coeur--plein {
-  font-size: 25px;
+  font-size: 26px;
   opacity: 0;
-  position: absolute;
-  bottom: 33px;
-  right: 25px;
   color: transparent;
   background-image: linear-gradient(to bottom, #9356DC, #FF79DA);
   -webkit-background-clip: text;
@@ -444,6 +446,10 @@ input[type=text] {
   transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
   transition-delay: 500ms;
   transition-duration: 500ms;
+  position: absolute;
+  position: absolute;
+  bottom: 33px;
+  right: 25px;
 }
 .carte_restaurant_bas__coeur .carte_restaurant_bas__coeur--plein:hover {
   opacity: 1;
@@ -501,5 +507,207 @@ input[type=text] {
 @media (min-width: 768px) {
   .footer_bloc .footer__txt_ss_logo {
     margin-left: 20px;
+  }
+}
+
+/*** CARTE-MENU ***/
+.menu {
+  width: 100%;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+}
+
+.menu__image_plat_restaurant {
+  min-height: 275px;
+  background-size: cover;
+  background-position: center;
+}
+
+.menu_titre {
+  width: 100%;
+  height: 69px;
+  border-radius: 32px 32px 0px 0px;
+  margin-top: -55px;
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+}
+.menu_titre .menu_texte__titre {
+  font-family: "shrikhand";
+  font-size: 28px;
+  font-weight: 400;
+  position: absolute;
+  left: 17px;
+  top: 32px;
+}
+.menu_titre .menu__coeur--vide {
+  font-size: 26px;
+  position: absolute;
+  top: 32px;
+  right: 50px;
+}
+.menu_titre .menu__coeur--plein {
+  font-size: 26px;
+  opacity: 0;
+  color: transparent;
+  background-image: linear-gradient(to bottom, #9356DC, #FF79DA);
+  -webkit-background-clip: text;
+  background-clip: text;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
+  transition-delay: 500ms;
+  transition-duration: 500ms;
+  position: absolute;
+  position: absolute;
+  top: 32px;
+  right: 50px;
+}
+.menu_titre .menu__coeur--plein:hover {
+  opacity: 1;
+}
+.menu_titre .menu__coeur--plein:hover::after {
+  opacity: 0;
+}
+
+.carte_menu {
+  display: flex;
+  flex-direction: column;
+  padding: 42px 13px 40px 13px;
+  gap: 40px;
+}
+
+.carte_entrees {
+  width: 94%;
+  margin-top: 40px;
+  margin-left: 3%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 12px;
+}
+
+.carte_menu__sous-titre {
+  text-transform: uppercase;
+  border-bottom: 3px solid #99E2D0;
+  padding-bottom: 5px;
+  margin-bottom: 12px;
+  width: 40px;
+}
+
+.bouton_plat {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.bouton_plat_bloc {
+  background: white;
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border-radius: 15px;
+  height: 69px;
+  overflow: hidden;
+}
+.bouton_plat_bloc:hover {
+  filter: brightness(1.1);
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.5);
+}
+.bouton_plat_bloc:hover > .bouton_plat_bloc_check {
+  animation: bloc-check__visible 0.8s forwards ease-in-out;
+}
+
+.bouton_plat_infos {
+  padding: 12px 16px 12px 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  width: 100%;
+  min-width: 70%;
+}
+.bouton_plat_infos p, .bouton_plat_infos h4 {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 90%;
+}
+
+.bouton_plat_info_texte {
+  display: flex;
+  justify-content: space-between;
+  font-size: 15px;
+}
+
+.bouton_plat_bloc_check {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 59px;
+  height: 69px;
+  background-color: #99E2D0;
+  border-radius: 0px 15px 15px 0px;
+  margin-right: -65px;
+  animation: bloc-check__invisible 0.8s;
+}
+
+.bouton_plat_logo_check {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  background-color: white;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  color: #99E2D0;
+}
+
+@keyframes bloc-check__visible {
+  from {
+    opacity: 0;
+    margin-right: -65px;
+  }
+  to {
+    opacity: 1;
+    margin-right: 0px;
+  }
+}
+@keyframes bloc-check__invisible {
+  from {
+    opacity: 1;
+    margin-right: 0;
+  }
+  to {
+    opacity: 0;
+    margin-right: -65px;
+  }
+}
+.carte_entrees {
+  opacity: 0;
+  animation: menus-in 1s 0.5s forwards ease-out;
+}
+
+.plats {
+  opacity: 0;
+  animation: menus-in 1s 1s forwards ease-out;
+}
+
+.desserts {
+  opacity: 0;
+  animation: menus-in 1s 1.5s forwards ease-out;
+}
+
+@keyframes menus-in {
+  from {
+    opacity: 0;
+    transform: translatey(-20%);
+  }
+  to {
+    opacity: 1;
+    transform: translatey(0);
   }
 }/*# sourceMappingURL=style.css.map */
