--- a/css/style.scss
+++ b/css/style.scss
@@ -532,25 +532,25 @@ input[type='text'] {
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
+    .menu__image_plat_restaurant {
+        min-height: 275px;
+        background-size: cover;
+        background-position: center;
+    }
 }
 
-.menu__image_plat_restaurant {
-    min-height: 275px;
-    background-size: cover;
-    background-position: center;
-}
 
 .menu_titre {
     width: 100%;
     height: 69px;
     border-radius: 32px 32px 0px 0px;
     margin-top: -55px;
-    background-color: white;
+    background-color:$greyligth-color;
     display: flex;
     justify-content: space-between;
     position: relative;
 
-    .menu_texte__titre {
+    .menu_nom_restaurant {
         font-family: 'shrikhand';
         font-size: 28px;
         font-weight: 400;
@@ -583,24 +583,28 @@ input[type='text'] {
 }
 
 
-.carte_menu {
+.menu-entrees-plats-desserts {
     display: flex;
     flex-direction: column;
-    padding: 42px 13px 40px 13px;
+    background-color:$greyligth-color;
+    padding: 0px 13px 40px 13px;
     gap: 40px;
 }
 
-.carte_entrees {
-    width: 94%;
+.menu_entrees,
+.menu_plats_principaux,
+.menu_desserts {
+    width: 100%;
     margin-top: 40px;
-    margin-left: 3%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     gap: 12px;
+	opacity: 0;
+	animation: menus-in 1s 0.5s forwards ease-out;
 }
 
-.carte_menu__sous-titre {
+.section_menu__sous-titre {
     text-transform: uppercase;
     border-bottom: 3px solid $greenligth-color;
     padding-bottom: 5px;
@@ -608,13 +612,13 @@ input[type='text'] {
     width: 40px;
 }
 
-.bouton_plat {
+.section_menu__bouton_plat {
     display: flex;
     flex-direction: column;
     gap: 12px;
 }
 
-.bouton_plat_bloc {
+.bouton_plat__bloc {
     background: white;
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
     position: relative;
@@ -627,12 +631,12 @@ input[type='text'] {
     &:hover {
     filter: brightness(1.1);
     box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.5);
-       & > .bouton_plat_bloc_check {
+       & > .bouton_plat__bloc_check {
             animation: bloc-check__visible 0.8s forwards ease-in-out;
         }
     }
 }
-.bouton_plat_infos {
+.bouton_plat__infos {
     padding: 12px 16px 12px 15px;
     display: flex;
     flex-direction: column;
@@ -646,14 +650,14 @@ input[type='text'] {
         max-width: 90%;
     }
 }
-.bouton_plat_info_texte {
+.bouton_plat__info_texte {
     display: flex;
     justify-content: space-between;
     font-size: 15px;
 }
 
 
-.bouton_plat_bloc_check {
+.bouton_plat__bloc_check {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -665,7 +669,7 @@ input[type='text'] {
     animation: bloc-check__invisible 0.8s;
 }
 
-.bouton_plat_logo_check {
+.bouton_plat__logo_check {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -701,18 +705,17 @@ input[type='text'] {
         margin-right: -65px;
     }
 }
-
-.carte_entrees {
+.menu_entrees {
 	opacity: 0;
-	animation: menus-in 1s 0.5s forwards ease-out;
+	animation: menus-in 0.4s 0.4s forwards ease-out;
 }
-.plats {
+.menu_plats_principaux {
 	opacity: 0;
-	animation: menus-in 1s 1s forwards ease-out;
+	animation: menus-in 0.2s 0.8s forwards ease-out;
 }
-.desserts {
+.menu_desserts {
 	opacity: 0;
-	animation: menus-in 1s 1.5s forwards ease-out;
+	animation: menus-in 0.1s 1.0s forwards ease-out;
 }
 @keyframes menus-in {
     from {
