--- a/css/mixins.scss
+++ b/css/mixins.scss
@@ -15,3 +15,21 @@
 @mixin coeur-vide{
     font-size: 26px;
 }
+
+@mixin bouton-gradient{
+margin-top: 15px;
+margin-bottom: 57px;
+border-radius: 25px;
+border: none;
+color: white;
+background: linear-gradient(to bottom right, $mauve-second-color, $mauve-color);
+box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
+display: flex;
+justify-content: center;
+align-items: center;
+    &:hover {
+    filter: brightness(1.1);
+    box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.5);
+    }
+}
+
