--- a/css/variables.scss
+++ b/css/variables.scss
@@ -1,5 +1,5 @@
 // Variables
-$background-color: #eaeaea;   /* fonds gris */
+$background-color: #F6F6F6;   /* fonds gris */
 $greenligth-color: #99E2D0;   /* vert clair */
 $green-color: #008766;        /* vert foncé */
 $blueligth-color: #89C8FA;    /* bleu clair */
@@ -7,4 +7,4 @@ $blue-color: #003A68;         /* bleu foncé */
 $mauve-color: #9356DC;        /* mauve */
 $mauve-second-color: #FF79DA; /* mauve */
 $grey-color: #353535;         /* gris */
-$greyligth-color: #F6F6F6;    /* gris-clair */
+$greyligth-color: #EAEAEA;    /* gris-clair */
