--- a/css/style.scss
+++ b/css/style.scss
@@ -24,6 +24,10 @@ h4 {
     font-size: 18px;
     font-weight: bold;
 }
+h5 {
+    font-size: 16px;
+    font-weight: 300;
+}
 .euro {
     font-weight: 700;
 }
