--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,11 @@ h4 {
   font-weight: bold;
 }
 
+h5 {
+  font-size: 16px;
+  font-weight: 300;
+}
+
 .euro {
   font-weight: 700;
 }
@@ -108,11 +113,11 @@ h4 {
   left: 50px;
   width: 100px;
   height: 100px;
-  border-top: 5px solid #9356DC;
   border-radius: 50%;
+  border-top: 5px solid #9356DC;
+  border-bottom: 5px solid #FF79DA;
   /*animation: 1500ms spin cubic-bezier(.42, 0, .58, 1) infinite;*/
   animation: 1500ms spin linear infinite;
-  border-bottom: 5px solid #FF79DA;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -122,9 +127,11 @@ h4 {
   width: 110px;
   height: 110px;
   color: #9356dc;
-  position: relative;
+  /*position: relative;
   left: -27px;
-  top: -2px;
+  top: -2px;*/
+  animation: 1500ms spin linear reverse;
+  animation-iteration-count: 1;
 }
 
 @keyframes spin {
