--- a/css/style.scss
+++ b/css/style.scss
@@ -116,11 +116,11 @@ h5 {
     left: 50px;
     width: 100px;
     height: 100px;
-    border-top: 5px solid $mauve-color;
     border-radius: 50%;
+    border-top: 5px solid $mauve-color;
+    border-bottom: 5px solid $mauve-second-color;
     /*animation: 1500ms spin cubic-bezier(.42, 0, .58, 1) infinite;*/
     animation: 1500ms spin linear infinite;
-    border-bottom: 5px solid $mauve-second-color;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -130,9 +130,11 @@ h5 {
     width: 110px;
     height: 110px;
     color: #9356dc;
-    position: relative;
+    /*position: relative;
     left: -27px;
-    top: -2px;
+    top: -2px;*/
+    animation: 1500ms spin linear reverse;
+    animation-iteration-count: 1;
 }
 
 @keyframes spin {
