--- a/css/style.css
+++ b/css/style.css
@@ -109,14 +109,13 @@ h5 {
 }
 
 .loader {
-  position: relative;
-  left: 50px;
+  margin: auto;
   width: 100px;
   height: 100px;
+  margin: auto;
   border-radius: 50%;
   border-top: 5px solid #9356DC;
   border-bottom: 5px solid #FF79DA;
-  /*animation: 1500ms spin cubic-bezier(.42, 0, .58, 1) infinite;*/
   animation: 1500ms spin linear infinite;
   display: flex;
   align-items: center;
@@ -639,8 +638,6 @@ main {
   flex-direction: column;
   justify-content: space-between;
   gap: 12px;
-  opacity: 0;
-  animation: menus-affichage 1s 0.5s forwards ease-out;
 }
 
 .section_menu__sous-titre {
@@ -674,13 +671,6 @@ main {
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.5);
 }
 .bouton_plat__bloc:hover > .bouton_plat__bloc_check {
-  animation: bloc-check__visible 1s forwards ease-in-out;
-}
-.bouton_plat__bloc:hover::after {
-  filter: brightness(1.1);
-  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.5);
-}
-.bouton_plat__bloc:hover::after > .bouton_plat__bloc_check {
   animation: bloc-check__visible 1s forwards ease-in-out;
 }
 
