--- a/css/style.scss
+++ b/css/style.scss
@@ -209,11 +209,14 @@ main {
     @media (min-width: 767.99px) {
         box-shadow: none;
     }
-   margin-top: 0px;
+    margin-top: 0px;
     margin-bottom: 0px;
     display: flex;
     flex-direction: row;
     gap: 19px;
+}
+.fa-lg{
+    color:black;
 }
 
 .localisation__input {
